Templates setup social

--- a/my_projects/social_project/social_app/templates/social_app/login.html
+++ b/my_projects/social_project/social_app/templates/social_app/login.html
@@ -1,12 +1,12 @@
 {% extends 'base/base.html' %}
 
-{%block title %} Social Project {%endblock title%}
+{%block title %} Social Login {%endblock title%}
 
 
 
 {%block content %}
 {%include 'social_app/social_nav.html' %}
-<h4>myabe i am right</h4>
+<h4>Login Page </h4>
 {%endblock %}
 
 
