--- a/my_projects/social_project/social_app/templates/social_app/social_nav.html
+++ b/my_projects/social_project/social_app/templates/social_app/social_nav.html
@@ -5,15 +5,22 @@
     </button>
   
     <div class="collapse navbar-collapse" id="navbarColor02">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link" href="#">Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
+        {% if request.user.is_authenticated %}
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="{% url 'social-signup' %}">LogOut</a>
         </li>
+
+        {%else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'social-signup' %}">Sign up</a>
+        </li>
+        {%endif%}
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
         </li>
