--- a/my_projects/templates/my_projects/home.html
+++ b/my_projects/templates/my_projects/home.html
@@ -10,7 +10,7 @@
     <hr class="my-4">
     <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="#" role="button">See All My Projects</a>
+      <a class="btn btn-primary btn-lg" href="{% url 'project-list' %}" role="button">See All My Projects</a>
     </p>
   </div>
 
