--- a/my_projects/social_project/social_app/templates/social_app/login.html
+++ b/my_projects/social_project/social_app/templates/social_app/login.html
@@ -1,12 +1,31 @@
 {% extends 'base/base.html' %}
-
-{%block title %} Social Login {%endblock title%}
+{% load crispy_forms_tags %}
+{%block title %} Social login {%endblock title%}
 
 
 
 {%block content %}
 {%include 'social_app/social_nav.html' %}
-<h4>Login Page </h4>
+<!-- <h4>signup Page </h4> -->
+<div class="container-fluid">
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-6">
+            <div class="card border border-primary">
+                <div class="card-header text-center bg-dark text-white">
+                    <h5>LOGIN  PAGE</h5>
+                </div>
+                <div class="card-body">
+                    <form action="" method="POST" class="form">
+                        {% csrf_token %}
+                        {{form|crispy}}
+                        <button class="btn btn-sm btn-success btn-block" type="submit">LOG IN</button>
+                        <!-- <input type="submit" name="" id=""> -->
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {%endblock %}
 
 
