--- a/my_projects/social_project/social_app/templates/social_app/social_nav.html
+++ b/my_projects/social_project/social_app/templates/social_app/social_nav.html
@@ -19,6 +19,14 @@
         {%else %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'social-signup' %}">Sign up</a>
+          
+
+        </li>
+
+        <li class="nav-item">
+         
+          <a class="nav-link" href="{% url 'social-login' %}">Log in</a>
+
         </li>
         {%endif%}
         <li class="nav-item">
