--- a/my_projects/social_project/social_app/templates/social_app/social_nav.html
+++ b/my_projects/social_project/social_app/templates/social_app/social_nav.html
@@ -30,7 +30,7 @@
         </li>
         {%endif%}
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="{%url 'social-feed' %}">feed</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
