--- a/my_projects/social_project/social_app/templates/social_app/social_nav.html
+++ b/my_projects/social_project/social_app/templates/social_app/social_nav.html
@@ -12,6 +12,13 @@
           </a>
         </li>
         {% if request.user.is_authenticated %}
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'social-profile' request.user.username %}">My Profile</a>
+        </li>
+
+       
+
         <li class="nav-item">
           <a class="nav-link" href="{% url 'social-logout' %}">LogOut</a>
         </li>
