--- a/my_projects/social_project/social_profile/templates/social_profile/social_profile.html
+++ b/my_projects/social_project/social_profile/templates/social_profile/social_profile.html
@@ -14,6 +14,7 @@
             <div class="card">
                 <div class="card-header bg-dark text-center text-white">
                     <h5>PROFILE DETAILS</h5>
+                    <a href="{% url 'social-edit-avatar' %}" class="btn btn-sm btn-info">Edit Avatar</a>
                 </div>
                 <div class="card-body">
                     <h5>Profile Name: {{user.username}}</h5>
