--- a/my_projects/social_project/feed/templates/feed/feed.html
+++ b/my_projects/social_project/feed/templates/feed/feed.html
@@ -16,8 +16,9 @@
                     <form action="" v-on:submit.prevent="submitSocial()">
                         <div class="form-group">
                             <!-- <label for="email">Email:</label> -->
-                            <textarea class="form-control" name="" v-model="body" id="" cols="30" rows="5" placeholder="Write something..."></textarea>
-                          </div>
+                            <textarea class="form-control" name="" v-model="body" id="" cols="30" rows="5"
+                                placeholder="Write something..."></textarea>
+                        </div>
 
                         <button class="btn btn-sm btn-success float-right" type="submit"> submit</button>
 
@@ -26,27 +27,44 @@
                 <div class="card-body">
 
                     <div v-for="social in socials">
-                       
+
                         <blockquote class="blockquote text-left">
-                            
-                        <img :src="social.avatar" alt="" style="height: 50px; max-width: 100%;">
-                        
+
+                            <img :src="social.avatar" alt="" style="height: 50px; max-width: 100%;">
+
                             <p class="mb-0 d-inline">[[social.body]]</p>
-                            <footer class="blockquote-footer">Posted by -[[social.user]] <cite title="Source Title">@[[social.created_at]]</cite></footer>
-                          </blockquote>
+                            <footer class="blockquote-footer">Posted by -[[social.user]] <cite
+                                    title="Source Title">@[[social.created_at]]</cite></footer>
+                        </blockquote>
                     </div>
                     {% for social in socials %}
                     <blockquote class="blockquote text-left">
                         {% if social.created_by.SocialProfile.avatar %}
-                        <img src="{{social.created_by.SocialProfile.avatar.url}}" alt="" style="height: 50px; max-width: 100%;">
+                        <img src="{{social.created_by.SocialProfile.avatar.url}}" alt=""
+                            style="height: 50px; max-width: 100%;">
                         {%endif%}
                         <p class="mb-0 d-inline">{{social.body}}.</p>
-                        <footer class="blockquote-footer">Created By: {{social.created_by}} <cite title="Source Title">@{{social.created_at|naturaltime}}</cite></footer>
-                      </blockquote>
-                      <hr>
+
+
+                        <footer class="blockquote-footer">Created By: {{social.created_by}} <cite
+                                title="Source Title">@{{social.created_at|naturaltime}}</cite>
+                            <a @click="likeSocial({{social.id}})" v-if="!liked_socials.includes({{social.id}})" href="#"
+                                class="btn btn-sm btn-success ">👌
+
+                                
+                            </a>
+                            <span class="badge badge-success" v-if="liked_socials.includes({{social.id}})">Liked
+                                <small id="likes-{{social.id}}">{{social.likes.count}}</small>
+                            </span>
+                                
+
+
+                        </footer>
+                    </blockquote>
+                    <hr>
 
                     {% endfor %}
-      
+
 
                 </div>
             </div>
@@ -62,53 +80,79 @@
 <script>
     new Vue({
         el: '#socialApp',
-        delimiters: ['[[',']]'],
-        data(){
-            return{
+        delimiters: ['[[', ']]'],
+        data() {
+            return {
                 socials: [],
-                body:'',
+                body: '',
                 user: '{{request.user.username}}',
-                created_at:'now',
-                avatar: '{% if user.SocialProfile.avatar %} {{user.SocialProfile.avatar.url}} {%endif%}'
-                
-            }
-        },
-        methods:{
-            submitSocial(){
-                console.log('ok ok submiteed')
-                if (this.body.length>0){
-                    var social = {
-                        'body':this.body,
-                        'user':this.user,
-                        'created_at':this.created_at,
-                        'avatar':this.avatar,
-                        
-                    };
-                    this.socials.unshift(social);
+                created_at: 'now',
+                avatar: '{% if user.SocialProfile.avatar %} {{user.SocialProfile.avatar.url}} {%endif%}',
+                liked_socials: [{%for social in socials %} {%if social.Like %} {{ social.id }}, {% endif %} {% endfor %}]
 
-                    //
-                    fetch("{% url 'social-add-api' %}",{
-                        method:'POST',
-                        headers:{
-                            'Content-Type':'application/json',
-                            'X-csrftoken':'{{csrf_token}}'
-                        },
-                        credentials:'same-origin',
-                        body:JSON.stringify(social)
-                    })
-                    .then((response)=>{
+        }
+    },
+        methods: {
+        likeSocial(social_id) {
+            this.liked_socials.push(parseInt(social_id));
+
+            var social = {
+                'social_id': social_id,
+            };
+
+            fetch("{% url 'social-like-api' %}", {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'X-csrftoken': '{{csrf_token}}'
+                },
+                credentials: 'same-origin',
+                body: JSON.stringify(social)
+            })
+                .then((response) => {
+                    console.log(response)
+                })
+                .catch((error) => {
+                    console.log(error);
+                });
+            const el = document.getElementById('likes-' + social_id);
+            const likes = parseInt(el.innerHTML.split('')[0] + 1);
+            el.innerHTML = likes + ' likes';
+
+        },
+        submitSocial() {
+            console.log('ok ok submiteed')
+            if (this.body.length > 0) {
+                var social = {
+                    'body': this.body,
+                    'user': this.user,
+                    'created_at': this.created_at,
+                    'avatar': this.avatar,
+
+                };
+                this.socials.unshift(social);
+
+                //
+                fetch("{% url 'social-add-api' %}", {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-csrftoken': '{{csrf_token}}'
+                    },
+                    credentials: 'same-origin',
+                    body: JSON.stringify(social)
+                })
+                    .then((response) => {
                         console.log(response)
                     })
-                    .catch((error)=>{
+                    .catch((error) => {
                         console.log(error);
                     })
-                }
-                this.body = ''
             }
+            this.body = ''
         }
+    },
     })
 </script>
 
 {%endblock script %}
-
-
