--- a/my_projects/templates/base/base.html
+++ b/my_projects/templates/base/base.html
@@ -7,6 +7,8 @@
     <title>{%block title%}MY PROJECTS{%endblock title%}</title>
 
     <link rel="stylesheet" href="https://bootswatch.com/4/lumen/bootstrap.css">
+    <!-- link:css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
 
     {%block style%}  {%endblock style%}
 </head>
