--- a/my_projects/social_project/feed/templates/feed/search.html
+++ b/my_projects/social_project/feed/templates/feed/search.html
@@ -25,9 +25,43 @@
 
                 <div class="card-footer">
                   
-                    {% for social in socials %}
-                    <a href="{% url 'social-profile' social.username %}" class="btn btn-outline-primary  btn-block">{{social.username}} 🧐🧐🧐🧐🧐</a>
-                    {%endfor%}
+                  {%if socials %}
+                  {% for social in socials %}
+                  <a href="{% url 'social-profile' social.username %}" class="btn btn-outline-primary  btn-block">{{social.username}} 🧐🧐🧐🧐🧐</a>
+                  {%endfor%}
+                  {%endif%}
+
+
+                  {%if socials_feeds %}
+                  {% for social in socials_feeds %}
+
+               <a href="{% url 'social-profile' social.created_by.username %}" style="text-decoration: none;">
+                <blockquote class="blockquote text-left">
+                    {% if user.SocialProfile.avatar %}
+                    <img src="{{user.SocialProfile.avatar.url}}" alt="" style="height: 50px; max-width: 100%;">
+                    {%endif%}
+                    <p class="mb-0 d-inline">{{social.body}}.</p>
+                    <footer class="blockquote-footer">Created By: {{social.created_by}}
+                        <cite title="Source Title">@{{social.created_at|naturaltime}}</cite>
+                        <!--like area-->
+                        <!-- <a @click="likeSocial({{social.id}})" v-if="!liked_socials.includes({{social.id}})"
+                            class="btn btn-sm btn-outline-success "><i class="fas fa-thumbs-up"></i>
+
+
+                        </a>
+                        <span class="badge badge-success" v-if="liked_socials.includes({{social.id}})"><i
+                                class="fas fa-thumbs-up"></i></span>
+                        <small id="likes-{{social.id}}" class="badge badge-info">{{social.likes.count}} likes
+                            </small> -->
+
+
+                    </footer>
+                </blockquote>
+               </a>
+                  <!-- <p>post maybe</p> -->
+                  <!-- <a href="url 'social-profile' social.username %}" class="btn btn-outline-primary  btn-block">{{social.username}} 🧐🧐🧐🧐🧐</a> -->
+                  {%endfor%}
+                  {%endif%}
 
                    
                 </div>
