--- a/my_projects/social_project/social_app/templates/social_app/social_nav.html
+++ b/my_projects/social_project/social_app/templates/social_app/social_nav.html
@@ -1,52 +1,59 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">SocialSite</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
-    <div class="collapse navbar-collapse" id="navbarColor02">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
+    <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarColor02">
+
+
+      <form class="form-inline my-2 my-lg-0" action="{%url 'social-search' %}" method="GET">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" name="query" value="{{query}}">
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+      </form>
+
+
+      <ul class="navbar-nav float-right">
+        <!-- <li class="nav-item active">
           <a class="nav-link" href="#">Home
             <span class="sr-only">(current)</span>
           </a>
-        </li>
+        </li> -->
         {% if request.user.is_authenticated %}
 
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'social-profile' request.user.username %}">My Profile</a>
+          <a class="nav-link" href="{% url 'social-profile' request.user.username %}"><i class="fas fa-home"></i></a>
         </li>
+
+        <!-- <li class="nav-item">
+          <a class="nav-link" href="{%url 'social-feed' %}">My</a>
+        </li> -->
 
        
 
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'social-logout' %}">LogOut</a>
+          <a class="nav-link" href="{% url 'social-logout' %}"><i class="fas fa-sign-out-alt"></i></a>
         </li>
 
         {%else %}
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'social-signup' %}">Sign up</a>
+          <a class="nav-link" href="{% url 'social-signup' %}"><i class="fas fa-user-plus"></i></a>
           
 
         </li>
 
         <li class="nav-item">
          
-          <a class="nav-link" href="{% url 'social-login' %}">Log in</a>
+          <a class="nav-link" href="{% url 'social-login' %}"><i class="fas fa-sign-in-alt"></i></a>
 
         </li>
         {%endif%}
-        <li class="nav-item">
-          <a class="nav-link" href="{%url 'social-feed' %}">feed</a>
-        </li>
-        <li class="nav-item">
+       
+        <!-- <li class="nav-item">
           <a class="nav-link" href="{%url 'social-search' %}">Search</a>
-        </li>
+        </li> -->
         
       </ul>
-      <!-- <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search">
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-      </form> -->
+    
     </div>
   </nav>
