--- a/my_projects/templates/base/base.html
+++ b/my_projects/templates/base/base.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{%block title%}MY PROJECTS{%endblock title%}</title>
 
+    {%block favicon %} {%endblock favicon%}
+
     <link rel="stylesheet" href="https://bootswatch.com/4/lumen/bootstrap.css">
     <!-- link:css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
