Setup for conversations

--- a/my_projects/social_project/social_app/templates/social_app/social_nav.html
+++ b/my_projects/social_project/social_app/templates/social_app/social_nav.html
@@ -25,6 +25,10 @@
           <a class="nav-link" href="{% url 'social-profile' request.user.username %}"><i class="fas fa-home"></i></a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'social-converse' %}"><i class="fas fa-comments"></i></a>
+        </li>
+
         <!-- <li class="nav-item">
           <a class="nav-link" href="{%url 'social-feed' %}">My</a>
         </li> -->
