--- a/my_projects/social_project/social_app/templates/social_app/social_nav.html
+++ b/my_projects/social_project/social_app/templates/social_app/social_nav.html
@@ -30,6 +30,10 @@
         </li>
 
         <!-- <li class="nav-item">
+          <a class="nav-link" href="{% url 'social-converse' %}">Chats</a>
+        </li> -->
+
+        <!-- <li class="nav-item">
           <a class="nav-link" href="{%url 'social-feed' %}">My</a>
         </li> -->
 
@@ -61,3 +65,6 @@
     
     </div>
   </nav>
+
+
+  
