--- a/my_projects/ecommerce_project/ecommerce_app/templates/ecommerce/eco.html
+++ b/my_projects/ecommerce_project/ecommerce_app/templates/ecommerce/eco.html
@@ -1,9 +1,22 @@
 {%extends 'base/base.html'%}
 
 {%block title %}Ecommerce {%endblock title%}
-
+{%block favicon %}
+<link rel="shortcut icon" href="https://i.dlpng.com/static/png/6766240_preview.png" type="image/x-icon"> 
+{%endblock favicon%}
 
 {%block content%}
 {%include 'ecommerce/eco_nav.html'%}
-<h4>Ecommerce</h4>
+<!-- <h4>Ecommerce</h4> -->
+
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+    <div class="col-md-5 p-lg-5 mx-auto my-5">
+        <h1 class="display-4 font-weight-normal">Ecommerce Project</h1>
+        <p class="lead font-weight-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with
+            this example based on Apple's marketing pages.</p>
+        <a class="btn btn-outline-primary" href="#">VISIT THE SITES</a>
+    </div>
+    <div class="product-device box-shadow d-none d-md-block"></div>
+    <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
+</div>
 {%endblock%}
