--- a/my_projects/ecommerce_project/ecommerce_app/templates/ecommerce/eco_nav.html
+++ b/my_projects/ecommerce_project/ecommerce_app/templates/ecommerce/eco_nav.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#"><i class="fas fa-air-freshener"></i> Ecommerce</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
     <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link" href="#">Home
             <span class="sr-only">(current)</span>
@@ -30,10 +30,14 @@
             <a class="dropdown-item" href="#">Separated link</a>
           </div>
         </li>
+
+        <li>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                <!-- <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button> -->
+              </form>
+        </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search">
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-      </form>
+    
     </div>
   </nav>
