--- a/my_projects/ecommerce_project/ecommerce_app/templates/ecommerce/eco.html
+++ b/my_projects/ecommerce_project/ecommerce_app/templates/ecommerce/eco.html
@@ -19,4 +19,42 @@
     <div class="product-device box-shadow d-none d-md-block"></div>
     <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
 </div>
+
+
+
+
+
+<!-- {% if vendor} -->
+<nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
+  {%if vendor %}
+  <a class="navbar-brand btn-success btn btn-sm">You are a vendor</a>
+  {%else%}
+    <a class="navbar-brand btn-primary btn btn-sm" href="{%url 'eco-become-vendor' %}"><i class="fas fa-users"></i> Become a vendor</a>
+   
+    {%endif%}
+    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+        <li class="nav-item dropup">
+          <a class="nav-link dropdown-toggle" href="https://getbootstrap.com/" id="dropdown10" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropup</a>
+          <div class="dropdown-menu" aria-labelledby="dropdown10">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+      </ul>
+    </div> -->
+  </nav>
 {%endblock%}
