--- a/my_projects/ecommerce_project/ecommerce_app/templates/ecommerce/eco_nav.html
+++ b/my_projects/ecommerce_project/ecommerce_app/templates/ecommerce/eco_nav.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home
+          <a class="nav-link" href="{%url 'eco-home' %}">Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
