--- a/my_projects/templates/my_projects/project_list.html
+++ b/my_projects/templates/my_projects/project_list.html
@@ -11,5 +11,13 @@
       <a class="btn btn-primary btn-lg" href="{% url 'social-home' %}" role="button">Go to project</a>
     </p>
   </div>
+  <!-- <hr> -->
+  <div class="jumbotron">
+    <h1 class="display-3">Ecommerce Project</h1>
+  
+    <p class="lead">
+      <a class="btn btn-success btn-lg" href="{% url 'eco-home' %}" role="button">Go to project</a>
+    </p>
+  </div>
 
 {%endblock content%}
