product and category menu linked

--- a/my_projects/ecommerce_project/eco_product/templates/product/product.html
+++ b/my_projects/ecommerce_project/eco_product/templates/product/product.html
@@ -15,7 +15,7 @@
             <div class="card-header text-center bg-dark">
                 <h4 class="bg-primary text-light p-2">{{product.title}}</h4>
                 <!-- <p></p> -->
-                <img class="img-fluid" src="{{product.get_thumbnail}}" style="max-width:100%;" alt="Card image cap">
+                <img class="img-fluid" src="{{product.get_thumbnail}}" style="max-width:100%; height: 400px;" alt="Card image cap">
             </div>
             <div class="card-body">
                 <p>{{product.description}}</p>
