--- a/my_projects/ecommerce_project/ecommerce_app/templates/ecommerce/eco_nav.html
+++ b/my_projects/ecommerce_project/ecommerce_app/templates/ecommerce/eco_nav.html
@@ -21,13 +21,16 @@
           <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Category</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
+            {%for cat in menu_categories %}
+            <!-- <a class="dropdown-item" href="#">Action</a> -->
+
+            <a class="dropdown-item" href="{%url 'eco-category' cat.slug %}">{{cat.title}}</a>
+            {%endfor%}
+            <!-- <a class="dropdown-item" href="#">Something else here</a> -->
+            <!-- <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Separated link</a> -->
           </div>
         </li>
 
