--- a/my_projects/ecommerce_project/ecommerce_app/templates/ecommerce/eco_nav.html
+++ b/my_projects/ecommerce_project/ecommerce_app/templates/ecommerce/eco_nav.html
@@ -35,8 +35,8 @@
         </li>
 
         <li>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+            <form class="form-inline my-2 my-lg-0" action="{%url 'eco-search' %}" method="GET">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search" name="q">
                 <!-- <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button> -->
               </form>
         </li>
